feat: add FiringListDTO for summarized Firings in findAllByKilnId endpoints